--- a/LESSONS/lesson8/task11/style.css
+++ b/LESSONS/lesson8/task11/style.css
@@ -1,12 +1,11 @@
 * {
-    box-sizing: content-box;
+    box-sizing: border-box;
 }
 
 .rectangle {
     height: auto;
     width: auto;
     border: 3px solid black;
-    margin: 50px;
     padding: 50px;
 }
 
@@ -24,5 +23,4 @@
 
 .rectangle4 {
     background-color: pink;
-    height: 100px;
 }
