--- a/LESSONS/lesson9/task5/styles.css
+++ b/LESSONS/lesson9/task5/styles.css
@@ -8,13 +8,12 @@
     }
     
     .nav-list {
-        text-decoration: none;
+        list-style-type: none;
     }
     
     .nav-item {
         margin: 16px;
         float: left;
-        display: block;
         color: white;
     }
     
