--- a/LESSONS/lesson9/task5/styles.css
+++ b/LESSONS/lesson9/task5/styles.css
@@ -12,6 +12,8 @@
     }
     
     .nav-item {
+        position: relative;
+        top: -8px;
         margin: 16px;
         float: left;
         color: white;
