--- a/LESSONS/lesson9/task5/styles.css
+++ b/LESSONS/lesson9/task5/styles.css
@@ -3,19 +3,18 @@
         position: fixed;
         top: 0;
         width: 100%;
-        height: 40px;
         z-index: 2;    
     }
     
-    .nav-list {
-        position: absolute;
-        list-style-type: none;
+     .nav-list {
+        margin: 0;
+        line-height: 40px;
+        
     }
     
-    .nav-item {
-        
+     .nav-item {
+        display: inline-block;
         margin-left: 16px;
-        float: left;
         color: white;
     }
     
