--- a/LESSONS/lesson10/task2/styles.css
+++ b/LESSONS/lesson10/task2/styles.css
@@ -1,13 +1,63 @@
-div.block {
-    height: 100px;
-    min-width: 100px;
-    background-color: coral;
-    margin: 8px;
-    flex-shrink: 1;
-    flex-grow: 1;
+* {
+    box-sizing: border-box;
 }
 
-.container {
+.header {
+    height: 40px;
+    background-color: yellow;
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+}
+
+.footer {
+    height: 40px;
+    background-color: green;
+    display: flex;
+}
+
+.navigation {
+    margin: 16px;
+    display: flex;
+    list-style-type: none;
+}
+
+.navigation__item {
+    margin-right: 10px;
+}
+
+.footer__text {
+    margin: auto;
+}
+
+.page {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.content {
+    flex-grow: 1;
+    display: flex;
+}
+
+.dashboard {
+    display: flex;
+    flex-grow: 1;
+    background-color: pink;
+    justify-content: center;
+    align-items: center;
+}
+
+.ul {
+    list-style-type: none;
+}
+
+.news {
+    line-height: 40px;
+    width: 200px;
+    background-color: grey;
+}
+
+.news__text {
+    align-content: center;
 }
