--- a/LESSONS/lesson11/task4/styles.css
+++ b/LESSONS/lesson11/task4/styles.css
@@ -1,26 +1,20 @@
-* {
-    box-sizing: border-box;
+.main {
+    display: inline-block;
+    margin: 16px;
 }
 
 .text {
-    margin: 16px;
-    padding: 8px;
-    border-radius: 4px;
+    border-bottom: 1px dotted black;
+}
+
+.tooltip {
+    position: relative;
     background-color: grey;
+    border-radius: 4px;
+    padding: 8px;
     color: white;
     display: inline-block;
-    position: absolute;
-    top: 40px;
-    left: 0px;
+    bottom: -5px;
 }
 
-.dropdown:hover input[type="title"] {
-    display: flex;
-    left: 50px;
-}
-
-
-/* 
-input[type="title"] {
-    background: #acdacc;
-} */
+.text:hover input[type="title"] {}
