--- a/LESSONS/lesson11/task4/styles.css
+++ b/LESSONS/lesson11/task4/styles.css
@@ -1,4 +1,5 @@
 .main {
+    position: relative;
     display: inline-block;
     margin: 16px;
 }
@@ -8,13 +9,13 @@
 }
 
 .tooltip {
-    position: relative;
+    position: absolute;
     background-color: grey;
     border-radius: 4px;
     padding: 8px;
     color: white;
     display: inline-block;
-    bottom: -5px;
+    bottom: -40px;
 }
 
 .text:hover input[type="title"] {}
