--- a/LESSONS/lesson12/task2/styles.css
+++ b/LESSONS/lesson12/task2/styles.css
@@ -1,21 +1,34 @@
- html {
-     font-family: Verdana;
- }
- 
- h1 {
-     font-size: 74px;
-     overflow: hidden;
-     white-space: nowrap;
-     text-overflow: ellipsis;
-     width: 50%;
-     margin-top: 16px;
-     margin-bottom: 16px;
- }
- 
- div {
-     text-transform: uppercase;
-     text-align: center;
-     background-color: coral;
-     height: 200px;
-     line-height: 200px;
- }
+ *{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
+html{
+    font-family: Verdana;
+   }
+
+header{
+    margin:  0;
+}
+
+header h1{
+    font-size: 74px;
+    text-align: center;
+    overflow: hidden;
+    width: 50%;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    margin: 0 auto;
+}
+
+div{
+    height: 200px;
+    background-color: coral;
+    color: white;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 200px;
+}
+
