--- a/LESSONS/lesson16/task4/styles.css
+++ b/LESSONS/lesson16/task4/styles.css
@@ -1,12 +1,10 @@
-* {
+*{
     box-sizing: border-box;
 }
-
-body {
+body{
     background-color: bisque;
 }
-
-.main {
+.page{
     font-size: 16px;
     font-family: monospace;
     height: 100vh;
@@ -14,42 +12,39 @@ body {
     justify-content: center;
     align-items: center;
 }
-
-.login__form {
+.login-form{
     background-color: aqua;
     width: 300px;
-    padding: 16px;
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+    padding: 16px;
+    
 }
-
-.form__title {
+.form-title{
     text-transform: uppercase;
     text-align: center;
 }
 
-.form__input {
-    width: 100%;
-    height: 32px;
-    padding: 4px;
-    outline: none;
-    border-radius: 4px;
-    border: 1px solid #808080;
-}
-
-.form__control {
-    margin-bottom: 8px;
-}
-
-.form__label {
+.form-label{
     display: inline-block;
     margin-bottom: 4px;
 }
 
-input:required {
-    border: 3px solid #ff0000;
+.form-input{
+    width: 100%;
+    height: 32px;
+    border: 1px solid #808080;
+    border-radius: 4px;
+    padding: 4px;
+    outline: none;  
+}
+.form-control{
+    margin-bottom: 8px;
 }
 
-.submit__button {
+input:required{
+    border: 3px solid #ff0000;
+}
+.submit-button{
     width: 100%;
     height: 32px;
     background-color: #ff7f50;
