--- a/LESSONS/lesson16/task5/styles.css
+++ b/LESSONS/lesson16/task5/styles.css
@@ -1,11 +1,9 @@
-.form {
+.form{
     margin: 32px;
 }
-
-.form-control {
+.control{
     margin: 8px;
 }
-
 .languages input{
     margin-right: 5px;
 }
