--- a/LESSONS/lesson17/task1/style.css
+++ b/LESSONS/lesson17/task1/style.css
@@ -1,26 +1,21 @@
-    table {
-        width: 500px;
-        font-family: Arial, Helvetica, sans-serif;
-    }
-    
-    table {
-        margin: 32px;
-    }
-    
-    caption {
-        margin: 8px;
-    }
-    
-    table,
-    td,
-    th {
-        border: 1px solid black;
-        border-collapse: collapse;
-    }
-    
-    td,
-    th {
-        padding: 4px;
-        text-align: right;
-        line-height: 40px;
-    }
+*{
+    box-sizing: border-box;
+}
+
+table, 
+th, 
+td{
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+table{
+    width: 500px;
+    margin: 16px;
+}
+
+th, 
+td{
+    padding: 4px;
+    text-align: right;
+}
