--- a/LESSONS/lesson17/task1/style.css
+++ b/LESSONS/lesson17/task1/style.css
@@ -1,21 +1,16 @@
 *{
     box-sizing: border-box;
 }
-
-table, 
-th, 
-td{
+table, th, td{
     border: 1px solid black;
     border-collapse: collapse;
 }
-
 table{
     width: 500px;
     margin: 16px;
 }
 
-th, 
-td{
+th, td{
     padding: 4px;
     text-align: right;
 }
