--- a/LESSONS/lesson18/task1/styles.css
+++ b/LESSONS/lesson18/task1/styles.css
@@ -2,12 +2,12 @@
     display: flex;
 }
 
-.bird_small {
+.small-bird {
     width: 64px;
     height: 64px;
 }
 
-.bird_large {
+.large-bird {
     width: 320px;
     height: 320px;
 }
