--- a/LESSONS/lesson18/task2/styles.css
+++ b/LESSONS/lesson18/task2/styles.css
@@ -1,5 +1,5 @@
 .custom-button {
-    width: 250px;
+    width: 200px;
     height: 50px;
     background-color: coral;
     color: white;
@@ -26,6 +26,7 @@
     width: 32px;
     height: 32px;
     vertical-align: middle;
+    color: white;
 }
 
 .bird-icon:hover {
