--- a/LESSONS/lesson18/task2/styles.css
+++ b/LESSONS/lesson18/task2/styles.css
@@ -26,9 +26,6 @@
     width: 32px;
     height: 32px;
     vertical-align: middle;
-    color: white;
+    fill: white;
 }
 
-.bird-icon:hover {
-    fill: green;
-}
