--- a/LESSONS/lesson22/task1/styles.css
+++ b/LESSONS/lesson22/task1/styles.css
@@ -24,6 +24,12 @@
 
 @media screen and (orientation: landscape) {
     .container {
+        flex-direction: row;
+    }
+}
+
+@media screen and (orientation: portrait) {
+    .container {
         flex-direction: column;
     }
 }
