--- a/LESSONS/lesson22/task4/styles.css
+++ b/LESSONS/lesson22/task4/styles.css
@@ -49,8 +49,14 @@ html {
 }
 
 @media screen and (min-width: 600px) {
-    .navigation {
-       display: none; 
+    .fa-bars {
+        display: none;
     }
 }
 
+/* @media screen and (min-width: 900px) {
+    .content {
+        display: flex;
+    }
+}
+ */
