--- a/LESSONS/lesson22/task5/styles.css
+++ b/LESSONS/lesson22/task5/styles.css
@@ -21,13 +21,14 @@ body {
     justify-content: center;
 }
 
-.picture {
-    margin: auto;
-}
 
 img {
     max-width: 100%;
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+}
+
+.picture {
+    margin: auto;
 }
 
 .navigation,
@@ -113,15 +114,15 @@ img {
 }
 
 @media(min-width:600px) {
-    .main__nav-and-section {
+    .main-nav-section {
         display: flex;
         flex-grow: 3;
     }
-    .section {
-        width: 80%;
-    }
     .navigation {
         width: 20%;
+    }
+    .section {
+        width: 80%;
     }
 }
 
@@ -129,7 +130,7 @@ img {
     .main {
         display: flex;
     }
-    .main__nav-and-section {
+    .main-nav-section {
         width: 80%;
     }
     .news {
