--- a/LESSONS/lesson22/task5/styles.css
+++ b/LESSONS/lesson22/task5/styles.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
 }
+
 html {
     font-family: Verdana, Tahoma, sans-serif;
     color: #555;
@@ -21,6 +22,7 @@ body {
 }
 
 .picture {
+    margin-top: 10px;
     margin: auto;
 }
 
@@ -29,15 +31,15 @@ img {
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
 }
 
+.navigation,
+.section,
+.news {
+    padding: 0.5em;
+}
+
 .navigation {
     flex-direction: column;
     flex-grow: 1;
-}
-
-.section,
-.navigation,
-.news {
-    padding: 0.5em;
 }
 
 .nav-list {
@@ -46,12 +48,12 @@ img {
 }
 
 .nav-list-item {
+    background-color: #808080;
+    color: #fff;
     height: 2em;
     line-height: 2em;
     margin-bottom: 0.5em;
     padding: 0;
-    background-color: #808080;
-    color: #fff;
 }
 
 .nav-list-link {
@@ -69,10 +71,8 @@ img {
 
 .section {
     font-size: 1.25em;
-    display: flex;
     flex-direction: column;
-    flex-grow: 3;
-}
+    }
 
 .section__header {
     font-size: 5vw;
@@ -92,7 +92,6 @@ img {
 }
 
 .news {
-    display: flex;
     flex-direction: column;
     flex-grow: 1;
 }
@@ -102,13 +101,11 @@ img {
 }
 
 .footer {
-    
+    background-color: #e5e5e5;
+    padding: 0.4em;
     justify-content: center;
     align-items: center;
     margin-top: auto;
-    background-color: #e5e5e5;
-    padding: 0.4em;
-   
 }
 
 @media(min-width:600px) {
@@ -131,11 +128,10 @@ img {
     .main-nav-section {
         width: 80%;
     }
-     .section {
-        width: 60%;
-    }
     .news {
         width: 20%;
     }
-   
+    .section {
+        width: 60%;
+    }
 }
