--- a/LESSONS/lesson23/task2a/breakpoints.scss
+++ b/LESSONS/lesson23/task2a/breakpoints.scss
@@ -1,33 +1,24 @@
-$xs: 599px;
-$sm: 600px;
-$md: 900px;
-$lg: 1200px;
-@mixin for-extra-small {
-    @media screen and (max-width: $xs) {
+$sm:600px;
+$md:900px;
+$lg:1200px;
+
+@mixin for-medium{
+    @media(min-width:$sm){
         @content;
     }
 }
-
-@mixin for-small {
-    @media screen and (min-width: $sm) {
+@mixin for-large{
+    @media(min-width:$md){
         @content;
     }
 }
-
-@mixin for-medium-up {
-    @media screen and (min-width: $md) {
+@mixin for-extra-large{
+    @media(min-width:$lg){
         @content;
     }
 }
-
-@mixin for-large-up {
-    @media screen and (min-width: $lg) {
-        @content;
-    }
-}
-
-@mixin change-view {
-    @media (orientation: portrait) {
+@mixin change-view{
+    @media (orientation: portrait){
         @content;
     }
 }
