--- a/LESSONS/lesson23/task2a/index.scss
+++ b/LESSONS/lesson23/task2a/index.scss
@@ -1,37 +1,34 @@
 @import 'breakpoints.scss';
-* {
+
+*{
     box-sizing: border-box;
 }
-
-body {
+body{
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
 }
-
-.square {
+.square{
     width: 100px;
     height: 100px;
     background-color: #ff7f50;
     margin: 8px;
-    @include for-extra-small {
-        background-color: #ff7f50;
-    }
-    @include for-small {
+    
+    @include for-medium{
         background-color: #8a2be2;
     }
-    @include for-medium-up {
+    @include for-large{
         background-color: #a61;
     }
-    @include for-large-up {
+    @include for-extra-large{
         background-color: #c47;
     }
 }
-
-.container {
+.container{
     display: flex;
-    @include change-view {
+
+    @include change-view{
         flex-direction: column;
     }
 }
