--- a/LESSONS/lesson23/task2a/breakpoints.scss
+++ b/LESSONS/lesson23/task2a/breakpoints.scss
@@ -2,17 +2,17 @@ $sm:600px;
 $md:900px;
 $lg:1200px;
 
-@mixin for-medium{
+@mixin for-small{
     @media(min-width:$sm){
         @content;
     }
 }
-@mixin for-large{
+@mixin for-medium{
     @media(min-width:$md){
         @content;
     }
 }
-@mixin for-extra-large{
+@mixin for-large{
     @media(min-width:$lg){
         @content;
     }
